force-app/main/default/objects/Service_Item__c/fields/Clinic_Name__c.field-meta.xml
<CustomField>
    <fullName>Clinic_Name__c</fullName>
    <formula>Related_Clinic__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clinic Name</label>
    <type>Text</type>
</CustomField>