force-app/main/default/objects/Service_Item__c/fields/Clinic_Name_for_Sharing__c.field-meta.xml
<CustomField>
    <fullName>Clinic_Name_for_Sharing__c</fullName>
    <label>Clinic Name for Sharing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>