force-app/main/default/objects/Service_Item__c/fields/Cost_to_Deliver_Service__c.field-meta.xml
<CustomField>
    <fullName>Cost_to_Deliver_Service__c</fullName>
    <label>Cost to Deliver Service</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>