force-app/main/default/objects/Service_Item__c/fields/Cycle_Related__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Related__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cycle Related?</label>
    <type>Checkbox</type>
</CustomField>