force-app/main/default/objects/Service_Item__c/fields/GST_Applicable_Item__c.field-meta.xml
<CustomField>
    <fullName>GST_Applicable_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GST Applicable Item</label>
    <type>Checkbox</type>
</CustomField>