force-app/main/default/objects/Service_Item__c/fields/Related_Clinic__c.field-meta.xml
<CustomField>
    <fullName>Related_Clinic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Clinic</label>
    <referenceTo>Clinics__c</referenceTo>
    <relationshipLabel>Service Items</relationshipLabel>
    <relationshipName>Service_Items</relationshipName>
    <type>Lookup</type>
</CustomField>