force-app/main/default/objects/Service_Item__c/fields/Related_Cycle_Types__c.field-meta.xml
<CustomField>
    <fullName>Related_Cycle_Types__c</fullName>
    <label>Related Cycle Types?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IVF Cycle</fullName>
            </value>
            <value>
                <fullName>FET Cycle</fullName>
            </value>
            <value>
                <fullName>Duo Stim</fullName>
            </value>
            <value>
                <fullName>Egg Freeze Cycle</fullName>
            </value>
            <value>
                <fullName>Fresh Egg Donor Cycle</fullName>
            </value>
            <value>
                <fullName>IUI Cycle</fullName>
            </value>
            <value>
                <fullName>Lab Only Cycle</fullName>
            </value>
            <value>
                <fullName>OI Cycle</fullName>
            </value>
            <value>
                <fullName>VOT Cycle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>