force-app/main/default/objects/Service_Item__c/fields/Service_Item_Discription__c.field-meta.xml
<CustomField>
    <fullName>Service_Item_Discription__c</fullName>
    <label>Service Item Discription</label>
    <length>255</length>
    <type>Text</type>
</CustomField>