force-app/main/default/objects/Service_Item__c/fields/Text_of_Cycle_Type__c.field-meta.xml
<CustomField>
    <fullName>Text_of_Cycle_Type__c</fullName>
    <formula>IF ( INCLUDES ( Related_Cycle_Types__c , &quot;IVF Cycle&quot; ), &quot;IVF Cycle; &quot;,null ) &amp;
IF ( INCLUDES ( Related_Cycle_Types__c , &quot;FET Cycle&quot; ), &quot;FET Cycle; &quot;,null ) &amp;
IF ( INCLUDES ( Related_Cycle_Types__c , &quot;Duo Stim&quot; ), &quot;Duo Stim; &quot;,null ) &amp;
IF ( INCLUDES ( Related_Cycle_Types__c , &quot;Egg Freeze Cycle&quot;), &quot;Egg Freeze Cycle; &quot;,null ) &amp;
IF ( INCLUDES ( Related_Cycle_Types__c , &quot;IUI Cycle&quot;), &quot;IUI Cycle; &quot;,null ) &amp;
IF ( INCLUDES ( Related_Cycle_Types__c , &quot;OI Cycle&quot;), &quot;OI Cycle; &quot;,null ) &amp;
IF ( INCLUDES ( Related_Cycle_Types__c , &quot;Lab Only Cycle&quot;), &quot;Lab Only Cycle; &quot;,null ) &amp;
IF ( INCLUDES ( Related_Cycle_Types__c , &quot;VOT Cycle&quot;), &quot;VOT Cycle; &quot;,null ) &amp;
IF ( INCLUDES ( Related_Cycle_Types__c , &quot;Fresh Egg Donor Cycle&quot; ), &quot;Fresh Egg Donor Cycle; &quot;,null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Text of Cycle Type</label>
    <type>Text</type>
</CustomField>