force-app/main/default/objects/Service_Item__c/listViews/All_Service_Items.listView-meta.xml
<ListView>
    <fullName>All_Service_Items</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Service Items</label>
</ListView>