force-app/main/default/objects/Service_Item__c/listViews/Medicare_Service_Items.listView-meta.xml
<ListView>
    <fullName>Medicare_Service_Items</fullName>
    <columns>NAME</columns>
    <columns>Service_Item_Discription__c</columns>
    <columns>Text_of_Cycle_Type__c</columns>
    <filterScope>Mine</filterScope>
    <label>Medicare Service Items</label>
</ListView>